# octopus

./: .gitignore  CMakeLists.txt  README.rst  TODO.rst  test.py
applications/: 3d_torus.cpp  CMakeLists.txt
applications/3d_torus/: 3d_torus.cpp  3d_torus.hpp  3d_torus_cli.cpp  3d_torus_driver.cpp  3d_torus_initial_state.cpp  3d_torus_realtime_viz.cpp  3d_torus_sc13.cpp  3d_torus_update_kappa.cpp  CMakeLists.txt  interpolate.gpi  make_initial_state.gpi  make_uniform_mesh.py  sc13.gpi  test.py
applications/3d_torus/sc12_visualization/: clear_annotation.py  initialize.py
applications/3d_torus/visualization/contour_sc12_interactive/: initialize.py  set_view.py  set_view_angle.py
applications/3d_torus/visualization/isovolume_sc12_interactive/: #set_view.py#  #update_kappa_msg.py#  clear_annotation.py  clear_annotation.py~  initialize.py  reload.py  reload.py~  set_view.py~  set_view_angle.py  set_view_angle.py~  set_zoom.py  set_zoom.py~  visitlog.py  visitscript.py~
applications/3d_torus/visualization/tablet_interactive/: initialize.py  set_view.py
applications/rayleigh_taylor/: CMakeLists.txt  rayleigh_taylor_driver.cpp
applications/sod_shock_tube/: CMakeLists.txt  sod_shock_tube_driver.cpp  sod_shock_tube_driver.cpp~
cmake/: FindHPX_Silo.cmake  FindHPX_Visit.cmake
docs/: 10_20_2012_phone_call_with_zach  10_21_2012_irc_conversation_with_zach  11_07_2012_notes_on_running_sc12_demo  11_08_2012_irc_conversation_with_zach  11_09_2012_semi_discrete  11_26_2012_conversation_with_dominic_and_zach  11_28_2012_irc_conversation_with_zach_3_level_architecture  octree_operations.rst  todo.rst
octopus/: array.hpp  array1d.hpp  array3d.hpp  assert.hpp  atomic_bitset.hpp  axis.hpp  channel.hpp  child_index.hpp  config.hpp  driver.hpp  expansion.h  expansion.hpp  face.hpp  filesystem.hpp  global_variable.hpp  indexer2d.hpp  iomanip.hpp  join_paths.hpp  math.hpp  science.hpp  state.hpp  traits.hpp  trivial_serialization.hpp  vector.h  vector2d.hpp  vector3d.hpp  vector4d.hpp
octopus/engine/: configuration.hpp  engine_interface.hpp  engine_server.hpp  ini.hpp  module.hpp  node_distributor_base.hpp  runtime_config.hpp  science_table.hpp
octopus/io/: fstream.hpp  multi_writer.hpp  silo.hpp  writer.hpp
octopus/octree/: checkout_state.hpp  octree_apply_leaf.hpp  octree_client.hpp  octree_init_data.hpp  octree_reduce.hpp  octree_server.hpp
octopus/operators/: boost_array_arithmetic.hpp  std_vector_arithmetic.hpp
octopus/science/: dt_prediction.hpp  elementwise_refinement_criteria.hpp  initial_dx.hpp  initial_spacestep.hpp  minmod_reconstruction.hpp  physical_boundaries.hpp  ppm_reconstruction.hpp  reconstruction.hpp  refinement_criteria.hpp  science_table.hpp  state.hpp  timestep_prediction.hpp
octopus/visit/: visit_simulation_client.hpp  visit_simulation_server.hpp
src/: CMakeLists.txt  child_index.cpp  component_module.cpp  default_driver.cpp  default_main.cpp  driver.cpp  expansion.h  octopus_component.cpp  octopus_component_1.cpp  octopus_component_2.cpp
src/engine/: engine_interface.cpp  engine_server.cpp  runtime_config.cpp
src/io/: fstream.cpp  silo.cpp
src/modules/: CMakeLists.txt  single_locality_distributor.cpp
src/octree/: checkout_state.cpp  octree_client.cpp  octree_server.cpp
src/science/: minmod_reconstruction.cpp  ppm_reconstruction.cpp  reconstruction.cpp  science_table.cpp
src/visit/: visit_component.cpp  visit_simulation_server.cpp
tests/: CMakeLists.txt  array1d.cpp  child_index.cpp  global_variable.cpp  octree_create_child.cpp  octree_create_root.cpp  vector3d.cpp
